Add Google Sign-In functionality with backend support. Implement Google login endpoint in AuthController, validate Google ID tokens, and manage user accounts based on Google authentication. Update User entity to include GoogleId and adjust database schema accordingly. Enhance error handling and logging for better debugging. Include configuration for Google OAuth in appsettings.json.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ECommerceDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
-  "FrontendUrl": "http://localhost:4200"
+  "FrontendUrl": "http://localhost:4200",
+  "GoogleOAuth": {
+    "ClientId": "867848949678-4qjhet7k1vqnpeq88f29crmchds1amri.apps.googleusercontent.com"
+  }
 }
