--- a/appsettings.json
+++ b/appsettings.json
@@ -17,6 +17,9 @@
     "FromName": "E-Commerce App"
   },
   "FrontendUrl": "http://localhost:4200",
+  "GoogleOAuth": {
+    "ClientId": "867848949678-4qjhet7k1vqnpeq88f29crmchds1amri.apps.googleusercontent.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
